<resources>
    <string name="app_name">OFS MC</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="Home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_search">search</string>

    <string name="ofs_directory">OFS Directory</string>
    <string name="ofs_holiday">OFS Holiday</string>
    <string name="ofs_profile">Profile</string>
    <string name="ofs_home">Dashboard</string>


    <!--Hint-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="emp_Id">Employee Id</string>
    <string name="department">Department</string>
    <string name="extension">Extension</string>
    <string name="phase">Location</string>


</resources>
